<resources>
    <string name="app_name">ToeicExamApplication</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="login_register_button">Chưa có tài khoản? <b>Đăng ký ngay</b></string>
    <string name="signup_register_button">Bạn có tài khoản rồi? <b>Đăng nhập ngay</b></string>
    <string name="signup_forgot_button">Bạn đã cập nhật lại mật khẩu? <b>Đăng nhập ngay</b></string>
    <string name="title_activity_main">MainActivity</string>
    <string name="home">Home</string>

    <string name="menu_home">Home</string>
    <string name="menu_setting">Setting</string>
    <string name="language_learning_application">Language Learning Application</string>
    <string name="healer_toeic">Healer Toeic</string>

    <string name="menu_vocabulary">Từ vựng</string>
    <string name="menu_grammar">Ngữ pháp</string>
    <string name="menu_listening">listening</string>
    <string name="menu_reading">reading</string>
    <string name="menu_my_profile">Thông tin tài khoản</string>

    <string name="login">Đăng nhập</string>
    <string name="hello">Hello</string>
    <string name="learning_language_application_healer">Learning language application Healer!</string>
    <string name="gi_i_thi_u">Giới thiệu</string>
    <string name="h_ng_d_n">Hướng dẫn</string>
    <string name="c_i_t">Cài đặt</string>

</resources>